--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/addons": "^3.3.14",
     "@storybook/react": "^3.3.14",
     "babel-core": "^6.26.0",
-    "file-loader": "^1.1.11"
+    "file-loader": "^1.1.11",
+    "jest": "^22.4.2"
   }
 }
